--- a/package.json
+++ b/package.json
@@ -9,18 +9,39 @@
     "migrate:reset": "prisma migrate reset",
     "migrate:dev": "prisma migrate dev",
     "migrate:deploy": "prisma migrate deploy",
-    "prisma:generate": "prisma generate"
+    "prisma:generate": "prisma generate",
+    "lint": "eslint --ext .js,.ts --ignore-path .gitignore .",
+    "lint:fix": "eslint --ext .js,.ts --ignore-path .gitignore . --fix",
+    "test": "dotenv -e .env.test prisma migrate deploy && jest --coverage"
   },
   "dependencies": {
     "@prisma/client": "3.7.0",
+    "dotenv-cli": "^4.1.1",
     "express": "4.17.2",
+    "node-cron": "^3.0.0",
     "zod": "^3.11.6"
   },
   "devDependencies": {
     "@types/express": "4.17.13",
+    "@types/jest": "^27.4.0",
     "@types/node": "16.11.19",
+    "@types/node-cron": "^3.0.1",
+    "@typescript-eslint/eslint-plugin": "5.9.0",
+    "@typescript-eslint/parser": "5.9.0",
+    "eslint": "^8.2.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-prettier": "4.0.0",
+    "jest": "^27.4.7",
+    "lint-staged": "12.1.5",
+    "prettier": "2.5.1",
     "prisma": "3.7.0",
+    "simple-git-hooks": "2.7.0",
+    "ts-jest": "^27.1.2",
     "ts-node": "10.4.0",
     "typescript": "4.5.4"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "npx lint-staged"
   }
 }
