--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "build": "rm -rf dist && prisma generate && tsc",
-    "dev": "ts-node src/index.ts",
+    "dev": "nodemon",
     "start": "node dist/index.js",
     "migrate:reset": "prisma migrate reset",
     "migrate:dev": "prisma migrate dev",
@@ -16,12 +16,14 @@
   },
   "dependencies": {
     "@prisma/client": "3.7.0",
+    "cors": "^2.8.5",
     "dotenv-cli": "^4.1.1",
     "express": "4.17.2",
     "node-cron": "^3.0.0",
     "zod": "^3.11.6"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "4.17.13",
     "@types/jest": "^27.4.0",
     "@types/node": "16.11.19",
@@ -34,11 +36,12 @@
     "eslint-plugin-prettier": "4.0.0",
     "jest": "^27.4.7",
     "lint-staged": "12.1.5",
+    "nodemon": "^2.0.15",
     "prettier": "2.5.1",
     "prisma": "3.7.0",
     "simple-git-hooks": "2.7.0",
     "ts-jest": "^27.1.2",
-    "ts-node": "10.4.0",
+    "ts-node": "^10.4.0",
     "typescript": "4.5.4"
   },
   "simple-git-hooks": {
